Feat: OAuth for naver, kakao

--- a/doc/0721.md
+++ b/doc/0721.md
@@ -4,7 +4,9 @@
 	- kakao_oauth를 플러터 <-> Nest 사이에 어떻게 적용할지 고민
 	- naver는 어떻게 할지 고민중.
 
--
+- 애플 개발자 계정 생성
+	- 구매비용 연 99$ 💰
+	- 심사기간
 
 ## 오늘의 업무일지 📜
 
